Fixed text colors based on the contrast ratio (5:1 >)

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -69,7 +69,7 @@ html.darkmode {
     }
   }
   p.description {
-    color: #616161;
+    color: #848484;
     transition: 0.4s;
   }
 }
